--- a/kalingahospital/src/main/resources/application.properties
+++ b/kalingahospital/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql=true
+server.port=8082
 
